prevent editor overflow + scrollable navigation

--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,7 @@ body {
 
 #app {
     display: grid;
-    grid-template-columns: auto 1fr 1fr;
+    grid-template-columns: auto minmax(0, 1fr) 1fr;
     grid-template-rows: auto 1fr;
     grid-auto-flow: column;
     gap: 0.5rem;
